# auto-formatter-loader

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.yaml  configTemplate.yaml
.github/workflows/: cmake.yml  release.yml
include/: config.hpp  fileFinder.hpp  formater.hpp  formatter.hpp  gitignore.hpp  helper.hpp  language.hpp  processInfo.hpp  progams.hpp  programs.hpp  project_type.hpp  stringHelper.hpp  watcherEvent.hpp
include/formatters/: TemplateLoader.hpp  config.hpp  log.hpp  templateLoader.hpp
src/: config.cpp  fileFinder.cpp  foramter.cpp  gitignore.cpp  helper.cpp  language.cpp  log.cpp  main.cpp  processInfo.cpp  programs.cpp  stringHelper.cpp  templateLoader.cpp  watcherEvent.cpp
temp/: CMakeLists.txt  main.cpp  test.yaml
tests/: CMakeLists.txt  config.cpp  new_proces.cpp
